tests/semantic/valid/getln-integer-and-pause.inox
Module GetLnIntegerAndPauseValid

Main :
    A, B Integer := 0
    GetLn(A, B)
    PutLn(A + B)
    GetLn
;
