tests/semantic/invalid/get-expression.inox
Module GetExpressionInvalid

Main :
    A, B Integer := 0
    Get(A + B)
;
